--- a/max2/app/web/template/index.html
+++ b/max2/app/web/template/index.html
@@ -7,6 +7,7 @@
 <head>
   <script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
   <script type="application/javascript" src="js/yinghua.js"></script>
+  <script src="js/vue.global.js"></script>
 
   <style>
     body {
@@ -255,10 +256,10 @@
   <!--  金币/钻石 -->
   <div>
     <div style="background: url('img/ui/bg_0.png'); background-size: 100% 100%;height: 6.5%;width:11%;position: absolute;top:2%;left:50%;z-index:1;">
-
+    
     </div>
     <div style="background: url('img/ui/gold0.png'); background-size: 100% 100%;height: 6%;width:4%;position: absolute;top:2%;left:48%;z-index:1;">
-
+    
     </div>
     <div style="background: url('img/ui/bg_0.png'); background-size: 100% 100%;height: 6.5%;width:11%;position: absolute;top:2%;left:63%;z-index:1;">
 
@@ -266,10 +267,10 @@
     <div style="background: url('img/ui/gold1.png'); background-size: 100% 100%;height: 6%;width:4%;position: absolute;top:2%;left:61%;z-index:1;">
 
     </div>
-    <p style=" z-index:1;position: absolute; left:52.5%;top:1.3%; font-size:25px; color:white;"><?php echo "" . $_SESSION['jinbi'] . "" ?></p>
+    <p style=" z-index:1;position: absolute; left:52.5%;top:-1.2%; font-size:25px; color:white;">9999</p>
 
 
-    <p style=" z-index:1;position: absolute; left:65.5%;top:1.3%; font-size:25px; color:white;"><?php echo "" . $_SESSION['hunyu'] . "" ?></p>
+    <p style=" z-index:1;position: absolute; left:65.5%;top:-1.2%; font-size:25px; color:white;">9999</p>
   </div>
 
 
