--- a/max2/app/web/template/game.html
+++ b/max2/app/web/template/game.html
@@ -20,25 +20,12 @@
 <body>
     <!--地主底牌 -->
     
-    <div>
-        <img src="img/ui/tab_choose.png" style="position: absolute;z-index:-1;">
-        <img src='img/ui/tab_choose.png' width='60px' height='80px' style="margin-top: 20px;margin-left:40px;">
-        <img src='img/ui/tab_choose.png' width='60px' height='80px' style="margin-top: 20px;margin-left:5px;">
-        <img src='img/ui/tab_choose.png' width='60px' height='80px' style="margin-top: 20px;margin-left:5px;">
-    </div>
-    <!--地主底牌结束 -->
-
-     <!--弃牌堆 -->
-    <div >
-    <img id="" src='img/' width='120px' height='180px' style='margin-left:-55px;position: absolute; top: 28%;left:27'>
-    
     </div>
      <!--弃牌堆结束 -->
     <!--player1 牌 -->    
     <div class="player1_card">
     <img id=""
     src='img/1.png' width='120px' height='180px' style='margin-left:-55px;position: absolute; bottom: 8%;left:1' onclick="select(this,1)">
-    
     </div>
     <!--player1 牌结束 --> 
 
@@ -80,6 +67,21 @@
     </div>
 
     <!--player3 信息结束 -->  
+
+      <!--player4 信息 -->    
+  <div style="position: absolute;top:5%;left:40%;">
+    <div style="background-image: url(img/ui/chatlog.png);position: absolute;width: 105px;height: 105px;" >
+        <img src="img/touxiang/bighead #15212.png" width="137px" style="bottom:31.2%;left:3.1%;border-radius: 25px;">
+    </div>
+    <img src='img/54.png' width='100px'style='position: absolute;z-index:1;left:120px;'>
+   <p style="position: absolute;font-size:16px; color:white;top:30px;left:220px;width: 50px;">剩10张</p>
+    <div style="position: absolute;width:105px;height:40px;text-align:center;top:90px;">
+    <p style="z-index:1;font-size:16px; color:white;">帅哥</p> 
+    </div>
+    
+ </div>
+
+    <!--player4 信息结束 -->  
     
     <!--玩家身份信息 -->  
 <div style="width:140px;height:40px;text-align:center;position: absolute;bottom:27%;left:3%;">
