--- a/max2/app/web/template/game.html
+++ b/max2/app/web/template/game.html
@@ -33,9 +33,9 @@
     
     <div style="position: absolute;bottom:5%;left:3%;">
     <img src="img/ui/chatlog.png" width="140px" >
-    <img src="img/touxiang/bighead #15212.png" width="137px" style="position: absolute;bottom:31.2%;left:3.1%;border-radius: 25px;">
+    <img src="img/touxiang/bighead15718.png" width="137px" style="position: absolute;bottom:31.2%;left:3.1%;border-radius: 25px;">
     <div style="width:140px;height:40px;text-align:center;">
-    <p style="z-index:1;font-size:16px; color:white;">帅哥</p> 
+    <p style="z-index:1;font-size:16px; color:white;">帅哥1</p> 
     </div>
     
     </div>
@@ -43,40 +43,40 @@
     <!--player1 信息结束 -->  
 
  <!--player2 信息 -->    
- <div style="position: absolute;top:20%;right:5%;">
-    <img src="img/ui/chatlog.png" width="140px" >
-    <img src="img/touxiang/bighead #15212.png" width="137px" style="position: absolute;bottom:31.2%;left:3.1%;border-radius: 25px;">
+ <div style="position: absolute;top:30%;right:5%;">
+    <img src="img/ui/chatlog.png" width="90px" >
+    <img src="img/touxiang/bighead15419.png" width="90px" style="position: absolute;bottom:42.2%;left:3.1%;border-radius: 25px;">
     <div style="width:140px;height:40px;text-align:center;">
-    <p style="z-index:1;font-size:16px; color:white;">刷个</p> 
+    <p style="z-index:1;font-size:16px; color:white;">帅哥2</p> 
     </div>
-   <img src='img/54.png' width='100px'style='position: absolute;z-index:1;left:13%;top:95%'>
-   <p style="z-index:1;font-size:16px; color:white;position: absolute;top:150%;left:30%;">剩10张</p> 
+   <img src='img/54.png' width='80px'style='position: absolute;z-index:1;left:-70%;top:5%'>
+   <p style="z-index:1;font-size:16px; color:white;position: absolute;top:60%;left:-60%;">剩10张</p> 
     </div>
 
     <!--player2 信息结束 -->  
 
   <!--player3 信息 -->    
-  <div style="position: absolute;top:20%;left:3%;">
-    <img src="img/ui/chatlog.png" width="140px" >
-    <img src="img/touxiang/bighead #15212.png" width="137px" style="position: absolute;bottom:31.2%;left:3.1%;border-radius: 25px;">
-    <div style="width:140px;height:40px;text-align:center;">
-    <p style="z-index:1;font-size:16px; color:white;">帅哥</p> 
+  <div style="position: absolute;top:30%;left:3%;">
+    <img src="img/ui/chatlog.png" width="90px" >
+    <img src="img/touxiang/bighead15339.png" width="85px" style="position: absolute;bottom:42.2%;left:3.1%;border-radius: 25px;">
+    <div style="width:90px;height:40px;text-align:center;">
+    <p style="z-index:1;font-size:16px; color:white;">帅哥3</p> 
     </div>
-   <img src='img/54.png' width='100px'style='position: absolute;z-index:1;left:13%;top:95%'>
-   <p style="z-index:1;font-size:16px; color:white;position: absolute;top:150%;left:30%;">剩10张</p> 
+   <img src='img/54.png' width='80px'style='position: absolute;z-index:1;left:110%;top:0%'>
+   <p style="z-index:1;font-size:16px; color:white;position: absolute;top:60%;left:130%;width: 50px;">剩10张</p> 
     </div>
 
     <!--player3 信息结束 -->  
 
       <!--player4 信息 -->    
   <div style="position: absolute;top:5%;left:40%;">
-    <div style="background-image: url(img/ui/chatlog.png);position: absolute;width: 105px;height: 105px;" >
-        <img src="img/touxiang/bighead #15212.png" width="137px" style="bottom:31.2%;left:3.1%;border-radius: 25px;">
+    <div style="background-image: url(img/ui/chatlog.png); background-size:90px;position: absolute;width: 90px;height: 90px;" >
+        <img src="img/touxiang/bighead15729.png" width="90px" style="bottom:31.2%;left:3.1%;border-radius: 25px;">
     </div>
-    <img src='img/54.png' width='100px'style='position: absolute;z-index:1;left:120px;'>
-   <p style="position: absolute;font-size:16px; color:white;top:30px;left:220px;width: 50px;">剩10张</p>
+    <img src='img/54.png' width='80px'style='position: absolute;z-index:1;left:120px;'>
+   <p style="position: absolute;font-size:16px; color:white;top:90px;left:135px;width: 50px;">剩10张</p>
     <div style="position: absolute;width:105px;height:40px;text-align:center;top:90px;">
-    <p style="z-index:1;font-size:16px; color:white;">帅哥</p> 
+    <p style="z-index:1;font-size:16px; color:white;">帅哥4</p> 
     </div>
     
  </div>
