游戏页面优化

--- a/max2/app/web/template/game.html
+++ b/max2/app/web/template/game.html
@@ -25,15 +25,15 @@
     <!--player1 牌 -->    
     <div class="player1_card">
     <img id=""
-    src='img/1.png' width='120px' height='180px' style='margin-left:-55px;position: absolute; bottom: 8%;left:1' onclick="select(this,1)">
+    src='img/1.png' width='100px' height='120px' style='margin-left:-55px;position: absolute; bottom: 8%;left:20%' onclick="select(this,1)">
     </div>
     <!--player1 牌结束 --> 
 
     <!--player1 信息 -->   
     
     <div style="position: absolute;bottom:5%;left:3%;">
-    <img src="img/ui/chatlog.png" width="140px" >
-    <img src="img/touxiang/bighead15718.png" width="137px" style="position: absolute;bottom:31.2%;left:3.1%;border-radius: 25px;">
+    <img src="img/ui/chatlog.png" width="110px" >
+    <img src="img/touxiang/bighead15718.png" width="100px" style="position: absolute;bottom:38.2%;left:3%;border-radius: 25px;">
     <div style="width:140px;height:40px;text-align:center;">
     <p style="z-index:1;font-size:16px; color:white;">帅哥1</p> 
     </div>
@@ -59,11 +59,11 @@
   <div style="position: absolute;top:30%;left:3%;">
     <img src="img/ui/chatlog.png" width="90px" >
     <img src="img/touxiang/bighead15339.png" width="85px" style="position: absolute;bottom:42.2%;left:3.1%;border-radius: 25px;">
-    <div style="width:90px;height:40px;text-align:center;">
+    <div style="width:100px;height:40px;text-align:center;">
     <p style="z-index:1;font-size:16px; color:white;">帅哥3</p> 
     </div>
    <img src='img/54.png' width='80px'style='position: absolute;z-index:1;left:110%;top:0%'>
-   <p style="z-index:1;font-size:16px; color:white;position: absolute;top:60%;left:130%;width: 50px;">剩10张</p> 
+   <p style="z-index:1;font-size:16px; color:white;position: absolute;top:60%;left:130%;width: 60px;">剩10张</p>
     </div>
 
     <!--player3 信息结束 -->  
@@ -74,7 +74,7 @@
         <img src="img/touxiang/bighead15729.png" width="90px" style="bottom:31.2%;left:3.1%;border-radius: 25px;">
     </div>
     <img src='img/54.png' width='80px'style='position: absolute;z-index:1;left:120px;'>
-   <p style="position: absolute;font-size:16px; color:white;top:90px;left:135px;width: 50px;">剩10张</p>
+   <p style="position: absolute;font-size:16px; color:white;top:90px;left:135px;width: 60px;">剩10张</p>
     <div style="position: absolute;width:105px;height:40px;text-align:center;top:90px;">
     <p style="z-index:1;font-size:16px; color:white;">帅哥4</p> 
     </div>
