游戏页面优化

--- a/max2/app/web/template/game.html
+++ b/max2/app/web/template/game.html
@@ -18,14 +18,22 @@
 </head>
 
 <body>
-    <!--地主底牌 -->
-    
-    </div>
-     <!--弃牌堆结束 -->
     <!--player1 牌 -->    
     <div class="player1_card">
     <img id=""
-    src='img/1.png' width='100px' height='120px' style='margin-left:-55px;position: absolute; bottom: 8%;left:20%' onclick="select(this,1)">
+    src='img/1.png' width='100px' height='120px' style='position: absolute; top:78%; left: 12%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/2.png' width='90px' height='120px' style='position: absolute; top:78%; left: 19%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/3.png' width='90px' height='120px' style='position: absolute; top:78%; left: 26%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/4.png' width='90px' height='120px' style='position: absolute; top:78%; left: 33%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/5.png' width='90px' height='120px' style='position: absolute; top:78%; left: 40%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/6.png' width='90px' height='120px' style='position: absolute; top:78%; left: 47%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/7.png' width='90px' height='120px' style='position: absolute; top:78%; left: 54%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/8.png' width='90px' height='120px' style='position: absolute; top:78%; left: 61%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/9.png' width='90px' height='120px' style='position: absolute; top:78%; left: 68%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/10.png' width='90px' height='120px' style='position: absolute; top:78%; left: 75%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/11.png' width='90px' height='120px' style='position: absolute; top:78%; left: 82%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/12.png' width='90px' height='120px' style='position: absolute; top:78%; left: 89%;' onclick="select(this,1)" alt="">
+    <img id="" src='img/13.png' width='90px' height='120px' style='position: absolute; top:78%; left: 91%;' onclick="select(this,1)" alt="">
     </div>
     <!--player1 牌结束 --> 
 
